# image_resizer_service

./: .gitignore  .tool-versions  Cargo.toml  README.md  build.rs  dev-requirements.txt  docker-compose.yaml  generate_elixir.bat  generate_elixir.sh  generate_python.bat  options.md  run.sh  run_minio.sh
client/: client.py  dev-requirements.txt  helloworld_pb2.py  helloworld_pb2_grpc.py  resizer_pb2.py  resizer_pb2_grpc.py
elixir-client/: .gitignore  Dockerfile  Dockerfile.proto  README.md  do.exs  generate_in_docker.sh  mix.exs  protobuf.bat  run.sh
elixir-client/config/: runtime.exs
elixir-client/lib/: image_resizer.ex
elixir-client/lib/image_resizer/: binary_client.ex  client.ex
elixir-client/priv/proto/: resizer.pb.ex
elixir-client/test/: image_resizer_test.exs
proto/helloworld/: helloworld.proto
proto/resizer/: resizer.proto
server/: Cargo.toml  Dockerfile  build.bat
server/proto/resizer/: resizer.proto
server/src/: config.rs  image.rs  lib.rs  main.rs
server_listener/: Cargo.toml  design.md
server_listener/src/: main.rs
server_rest/: Cargo.toml  test.sh
server_rest/src/: main.rs
src/: config.rs  image.rs  main.rs  resizer.rs  resizer_binary.rs  s3_config.rs
