[package]
name = "image_resizer_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tonic
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.10"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.7", features = ["tls", "compression"] }
tower = { version = "0.4" }
http = "0.2.7"

# aws
aws-config = "0.12"
aws-sdk-s3 = "0.12"
bytes = "1.1"


# image
image = "0.24"
resize = "0.7"

# app
derivative = "2.2.0"
once_cell = "1.12.0"
zeroize = { version = "1.5.5", features = ["derive"] }
base64 = "0.13.0"
aes-gcm = { version = "0.9.4" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"


[build-dependencies]
tonic-build = { version = "*", features = ["prost", "compression"] }
