[package]
name = "server_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "*"

image = "*"

tokio = { version = "1", features = ["full"] }
futures = "*"

pretty_env_logger = "*"
serde = {version = "*", features=["derive"]}